--- a/index.html
+++ b/index.html
@@ -64,21 +64,21 @@
         <section class="benefits">
             <aside class="benefit-lead">
                 <h3>Lead Generation</h3>
-                <img src="./assets/images/lead-generation.png" alt="" />
+                <img src="./assets/images/lead-generation.png" alt="An image of a gear going into a funnel and coming out as money"/>
                 <p>
                     Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
                 </p>
             </aside>
             <aside class="benefit-brand">
                 <h3>Brand Awareness</h3>
-                <img src="./assets/images/brand-awareness.png" alt=""/>
+                <img src="./assets/images/brand-awareness.png" alt="An image of a lightbulb"/>
                 <p>
                     Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
                 </p>
             </aside>
             <aside class="benefit-cost">
                 <h3>Cost Management</h3>
-                <img src="./assets/images/cost-management.png" alt=""></img>
+                <img src="./assets/images/cost-management.png" alt="An image of a gear turning into dollars"></img>
                 <p>
                     As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
                 </p>
@@ -88,7 +88,7 @@
 
         <!--Footer Start-->
         <footer>
-            <h2>Made with ❤️️ by Horiseon</h2>
+            <h4>Made with ❤️️ by Horiseon</h4>
             <p>
                 &copy; 2019 Horiseon Social Solution Services, Inc.
             </p>
